--- a/sshguard/sshguard.conf
+++ b/sshguard/sshguard.conf
@@ -1,23 +1,23 @@
 #### REQUIRED CONFIGURATION ####
 # Full path to backend executable (required, no default)
-BACKEND="/usr/libexec/sshguard/sshg-fw-nft-sets"
+BACKEND="/var/log/auth.log"
 
 # Shell command that provides logs on standard output. (optional, no default)
 # Example 1: ssh and sendmail from systemd journal:
-LOGREADER="LANG=C journalctl -afb -p info -n1 -t sshd -o cat"
+LOGREADER="LANG=C.UTF-8 /bin/journalctl -afb -p info -n1 -t sshd -t vsftpd -o cat"
 
 #### OPTIONS ####
 # Block attackers when their cumulative attack score exceeds THRESHOLD.
 # Most attacks have a score of 10. (optional, default 30)
-THRESHOLD=30
+THRESHOLD=50
 
 # Block attackers for initially BLOCK_TIME seconds after exceeding THRESHOLD.
 # Subsequent blocks increase by a factor of 1.5. (optional, default 120)
-BLOCK_TIME=120
+BLOCK_TIME=300
 
 # Remember potential attackers for up to DETECTION_TIME seconds before
 # resetting their score. (optional, default 1800)
-DETECTION_TIME=1800
+DETECTION_TIME=120
 
 # IP addresses listed in the WHITELIST_FILE are considered to be
 # friendlies and will never be blocked.
