update sshguard, werkt nog niet

--- a/sshguard/sshguard.conf
+++ b/sshguard/sshguard.conf
@@ -1,10 +1,10 @@
 #### REQUIRED CONFIGURATION ####
 # Full path to backend executable (required, no default)
-BACKEND="/var/log/auth.log"
+BACKEND="/usr/libexec/sshguard/sshg-fw-nft-sets"
 
 # Shell command that provides logs on standard output. (optional, no default)
 # Example 1: ssh and sendmail from systemd journal:
-LOGREADER="LANG=C.UTF-8 /bin/journalctl -afb -p info -n1 -t sshd -t vsftpd -o cat"
+LOGREADER="LANG=C.UTF-8 journalctl -afb -p info -nl -t sshd -o cat"
 
 #### OPTIONS ####
 # Block attackers when their cumulative attack score exceeds THRESHOLD.
