update whitelist + config

--- a/sshguard/sshguard.conf
+++ b/sshguard/sshguard.conf
@@ -1,10 +1,10 @@
 #### REQUIRED CONFIGURATION ####
 # Full path to backend executable (required, no default)
-BACKEND="/usr/libexec/sshg-fw-iptables"
+BACKEND="/usr/libexec/sshguard/sshg-fw-nft-sets"
 
 # Shell command that provides logs on standard output. (optional, no default)
 # Example 1: ssh and sendmail from systemd journal:
-LOGREADER="LANG=C /bin/journalctl -afb -p info -n1 -t sshd -o cat"
+LOGREADER="LANG=C /usr/bin/journalctl -afb -p info -n1 -t sshd -t sendmail -o cat"
 
 FILES="/var/log/messages /var/log/auth.log" 
 
@@ -24,3 +24,4 @@ DETECTION_TIME=120
 # IP addresses listed in the WHITELIST_FILE are considered to be
 # friendlies and will never be blocked.
 WHITELIST_FILE=/etc/sshguard/whitelist
+
