--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -104,6 +104,7 @@
 /etc/mrt/d0574e45586c333962216e4ef23833ed IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/542d0444403e49f9fd57a3bba739429d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/d7de7273d13bb4e1e8da8fb3fbd5f911 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/fd11f1016a2aa0d2bea56b48d8d45021 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/5e99ea70776a91cb4fb50e1b5c453994 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/c90e9d649480a16eafc453dd365272a2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/91155da1820b648c70c10fe17be340bd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
