--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -6,6 +6,8 @@
 /etc/binfmt.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/cron.daily IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ldap IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/NetworkManager IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/NetworkManager/dispatcher.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/groff IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/init.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/profile.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -737,6 +739,7 @@
 /etc/systemd/network IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/getty.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/systemd/system/network-pre.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/socket.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/sysinit.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/network-online.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
