--- a/ntp.conf
+++ b/ntp.conf
@@ -35,12 +35,12 @@ pool ntp.ubuntu.com
 # up blocking replies from your own upstream servers.
 
 # By default, exchange time with everybody, but don't allow configuration.
-restrict -4 default kod notrap nomodify nopeer noquery limited
-restrict -6 default kod notrap nomodify nopeer noquery limited
+restrict default kod limited nomodify notrap nopeer noquery
+restrict -6 default kod limited nomodify notrap nopeer noquery
 
 # Local users may interrogate the ntp server more closely.
-restrict 127.0.0.1
-restrict ::1
+restrict 193.191.177.6
+restrict 2001:6a8:2880:a021::6
 
 # Needed for adding pool entries
 restrict source notrap nomodify noquery
