--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -28,16 +28,18 @@
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/depmod.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/bind IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rcS.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dhcp IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dhcp/dhclient-exit-hooks.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dhcp/dhclient-enter-hooks.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc5.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/afe9ae66e1f30e4058c11701f6a8e8ea IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/f0832161e961792b092100cb9820d683 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/bf25ea324c26791fe378d85e613044fc IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/7c4942ffd59c530ccdb9751b0c5b6c6d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/118e2af6c3d528e5ea45e4c84d3674a2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/cdd8b42ad8a8e6f7ca071966917665c8 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/c00f57a63e7a98bcf1cd6dffdb168d43 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/e8057cd9bfe35527ad9544ce880f475d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
