--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -29,17 +29,18 @@
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/depmod.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/bind IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/bind/zones IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rcS.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dhcp IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dhcp/dhclient-exit-hooks.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dhcp/dhclient-enter-hooks.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc5.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/5a9851cdde80f1f37630b41ca5bc4931 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/71daf968df366f9a980c76f348c1779b IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/3bfbe560fa38f948529b31de35201c8f IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/9a07104949ea60db75de4d7c58b6be8b IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/e82bb1cfc6bd0f4a22f50d7ef3bd9160 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/617a3fc2a0a293c3ace08233cbdc02dc IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/5d5e02ed57993e539b56b1ad4b50b97b IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
