--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -9,6 +9,13 @@
 /etc/NetworkManager IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/NetworkManager/dispatcher.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/groff IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/sites-enabled IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/mods-enabled IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/sites-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/conf-enabled IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/conf-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/apache2/mods-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/init.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/profile.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ppp IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -36,14 +43,16 @@
 /etc/dhcp/dhclient-enter-hooks.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc5.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/dd5c2f85d93033577fc50a57ced26a1f IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/ad0f288a9e453da1322eb595a649be11 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/67c60df0d13f78e062f8e685ce786b88 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/6f6d7843d3c5df9259c0e7dcd40f3485 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/47c141d0396f2d1e7afc46dc28603dce IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/3ca9af40530ccf167c92f9be395d29e0 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/21f2cce5b30577b640a0c3e02e8f72db IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/a6f8c71fa46e984424df7d7d409f538d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/6eabf662039fc93a2ee3af8405b10794 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/4756fb23f202bfe9cbd1a7eee58271fd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/0a39109e046f893bdf19ffdf947a231e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/ufw/applications.d/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/sysctl.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/tmpfiles.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/apparmor.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
