--- a/apache2/sites-available/www1.conf
+++ b/apache2/sites-available/www1.conf
@@ -22,6 +22,10 @@
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
+	<Directory /var/www/html/www1/private/>
+		AllowOverride All
+	</Directory>
+
 	# For most configuration files from conf-available/, which are
 	# enabled or disabled at a global level, it is possible to
 	# include a line for only one particular virtual host. For example the
