--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -34,6 +34,13 @@
 /etc/network/if-down.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/8.1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/8.1/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/8.1/apache2/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/8.1/cli IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/8.1/cli/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/php/8.1/mods-available IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/depmod.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/bind IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/bind/zones IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -46,7 +53,6 @@
 /etc/mrt/67c60df0d13f78e062f8e685ce786b88 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/6f6d7843d3c5df9259c0e7dcd40f3485 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/47c141d0396f2d1e7afc46dc28603dce IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/3ca9af40530ccf167c92f9be395d29e0 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/6eabf662039fc93a2ee3af8405b10794 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/4756fb23f202bfe9cbd1a7eee58271fd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/0a39109e046f893bdf19ffdf947a231e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
