--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -34,6 +34,7 @@
 /etc/network/if-down.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/init IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/php IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/php/8.1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/php/8.1/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -50,12 +51,12 @@
 /etc/dhcp/dhclient-enter-hooks.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc5.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/cb9a9265cd1993c24af622033e614690 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/619ee072dd030a7d99101a294eff9fdc IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/6b716e59f188e3c84afdc53767c9c3f9 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/8941f819d2a05e6c905bf9c26b196b36 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/7a7b68fa76bc889a17c5b57672c74465 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/9eb6dd46af63b106918d174b74eacdcd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/0efc39bf5f6db54718908bfd8955ae86 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/908b4e8bdf34a1715bb6d7715ed30eb1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt/17b42508dd7b9087d0f7913add80d234 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/9c5b4fcb77a291d62ae55bd121ed07d1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/12cfa8f1ec57aa50da479f85e048b33e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -85,7 +86,9 @@
 /etc/ssl/private IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ssl/certs IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/logcheck/ignore.d.paranoid IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck/ignore.d.server IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/logcheck/ignore.d.workstation IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/update-manager IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/update-manager/release-upgrades.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/pm IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -132,6 +135,9 @@
 /etc/xdg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg/autostart IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg/systemd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mysql IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mysql/mysql.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mysql/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/cron.monthly IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc2.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc3.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
