--- a/mysql/mysql.conf.d/mysqld.cnf
+++ b/mysql/mysql.conf.d/mysqld.cnf
@@ -16,10 +16,10 @@
 # * Basic Settings
 #
 user		= mysql
-# pid-file	= /var/run/mysqld/mysqld.pid
-# socket	= /var/run/mysqld/mysqld.sock
-# port		= 3306
-# datadir	= /var/lib/mysql
+pid-file	= /var/run/mysqld/mysqld.pid
+socket	= /var/run/mysqld/mysqld.sock
+port		= 3306
+datadir	= /var/lib/mysql
 
 
 # If MySQL is running as a replication slave, this should be
@@ -28,8 +28,9 @@ user		= mysql
 #
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
-bind-address		= 127.0.0.1
+#bind-address		= 193.191.177.207
 mysqlx-bind-address	= 127.0.0.1
+
 #
 # * Fine Tuning
 #
