imap werkt niet

--- a/dovecot/conf.d/10-master.conf
+++ b/dovecot/conf.d/10-master.conf
@@ -19,8 +19,8 @@ service imap-login {
     #port = 143
   }
   inet_listener imaps {
-    #port = 993
-    #ssl = yes
+    port = 993
+    ssl = yes
   }
 
   # Number of connections to handle before starting a new process. Typically
@@ -40,8 +40,8 @@ service pop3-login {
     #port = 110
   }
   inet_listener pop3s {
-    #port = 995
-    #ssl = yes
+    port = 995
+    ssl = yes
   }
 }
 
@@ -53,7 +53,9 @@ service submission-login {
 
 service lmtp {
   unix_listener lmtp {
-    #mode = 0666
+    mode = 0666
+    user = postfix
+    group = postfix
   }
 
   # Create inet listener only if you can't use the above UNIX socket
