--- a/dovecot/dovecot.conf
+++ b/dovecot/dovecot.conf
@@ -22,6 +22,7 @@
 
 # Enable installed protocols
 !include_try /usr/share/dovecot/protocols.d/*.protocol
+#auth_debug_passwords=yes
 
 # A comma separated list of IPs or hosts where to listen in for connections. 
 # "*" listens in all IPv4 interfaces, "::" listens in all IPv6 interfaces.
