git reset, want niks werkte nog

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -10,12 +10,6 @@
 /etc/NetworkManager IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/NetworkManager/dispatcher.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/groff IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-<<<<<<< HEAD
-=======
-/etc/fonts IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/fonts/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/fonts/conf.avail IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
->>>>>>> parent of 18773da (test)
 /etc/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/apache2/sites-enabled IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/apache2/mods-enabled IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -58,7 +52,13 @@
 /etc/dhcp/dhclient-enter-hooks.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc5.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/a4da28849adc4a9f79bb9ee06563cef1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/cdbcdd4eb8fe981fcc33a2b73d9b1d22 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/566290f2613c4f32d79718e4f2671b42 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/c7c0446ea7e142e957fb39e21759933d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/8af4f4d140984efc58af7691103585fd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/2ee3a59665d00bcf56031e222d115118 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/8fdd8237221f06405f92459bfef9a775 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/c198e171941ca27fc5fe45b5223c1311 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -95,9 +95,6 @@
 /etc/update-manager/release-upgrades.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/pm IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/pm/sleep.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/dbus-1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/dbus-1/session.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/dbus-1/system.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/sshguard IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/python3.10 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/udev IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -130,6 +127,12 @@
 /etc/resolvconf/update-libc.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/nagios-plugins IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/nagios-plugins/config IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/X11 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/X11/app-defaults IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/X11/Xreset.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/X11/Xsession.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/X11/Xresources IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/X11/xorg.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/skel IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/console-setup IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -173,7 +176,6 @@
 /etc/apt/preferences.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/apt/apt.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/apt/trusted.gpg.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/apt/sources.list.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/apt/keyrings IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/apt/auth.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/sudoers.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
