--- a/dovecot/dovecot.conf
+++ b/dovecot/dovecot.conf
@@ -23,6 +23,13 @@
 # Enable installed protocols
 !include_try /usr/share/dovecot/protocols.d/*.protocol
 
+# Abilitiamo i protocolli IMAP e POP3
+
+protocols = imap pop3
+
+#Allows Dovecot to listen to all input connections (ipv4 / ipv6)
+
+listen = *, ::
 # A comma separated list of IPs or hosts where to listen in for connections. 
 # "*" listens in all IPv4 interfaces, "::" listens in all IPv6 interfaces.
 # If you want to specify non-default ports or anything more complex,
