--- a/dovecot/conf.d/10-mail.conf
+++ b/dovecot/conf.d/10-mail.conf
@@ -21,12 +21,12 @@
 #
 # See doc/wiki/Variables.txt for full list. Some examples:
 #
-#   mail_location = maildir:~/Maildir
+mail_location = maildir:~/Maildir
 #   mail_location = mbox:~/mail:INBOX=/var/mail/%u
 #   mail_location = mbox:/var/mail/%d/%1n/%n:INDEX=/var/indexes/%d/%1n/%n
 #
 # <doc/wiki/MailLocation.txt>
-#
+
 mail_location = mbox:~/mail:INBOX=/var/mail/%u
 
 # If you need to set multiple mailbox locations or want to change default
