--- a/dovecot/conf.d/10-mail.conf
+++ b/dovecot/conf.d/10-mail.conf
@@ -21,14 +21,14 @@
 #
 # See doc/wiki/Variables.txt for full list. Some examples:
 #
-mail_location = maildir:~/Maildir
+# mail_location = maildir:~/Maildir
 #   mail_location = mbox:~/mail:INBOX=/var/mail/%u
 #   mail_location = mbox:/var/mail/%d/%1n/%n:INDEX=/var/indexes/%d/%1n/%n
 #
 # <doc/wiki/MailLocation.txt>
-
+mail_home = /var/vmail/robbe-jacobs1.sb.uclllabs.be/%n
 mail_location = mbox:~/mail:INBOX=/var/mail/%u
-
+mail_access_groups = mail
 # If you need to set multiple mailbox locations or want to change default
 # namespace settings, you can do it by defining namespace sections.
 #
