--- a/dovecot/dovecot.conf
+++ b/dovecot/dovecot.conf
@@ -24,12 +24,22 @@
 !include_try /usr/share/dovecot/protocols.d/*.protocol
 
 # Abilitiamo i protocolli IMAP e POP3
-
+mail_location = maildir:/var/vmail/robbe-jacobs1.sb.uclllabs.be/%n
 protocols = imap pop3
 
 #Allows Dovecot to listen to all input connections (ipv4 / ipv6)
 
 listen = *, ::
+
+passdb {
+  driver = passwd-file
+  args = /etc/dovecot/passwd
+}
+
+userdb {
+  driver = static
+  args = uid=vmail gid=vmail home=/var/vmail/robbe-jacobs1.sb.uclllabs.be/%n
+}
 # A comma separated list of IPs or hosts where to listen in for connections. 
 # "*" listens in all IPv4 interfaces, "::" listens in all IPv6 interfaces.
 # If you want to specify non-default ports or anything more complex,
